Resolve all 19 code review findings: schema parity, log safety, dead state, Rule 1 explainability
Addresses every finding of the NOT APPROVED review (1 critical, 6 major,
7 medium, 4 low, 1 info) across 56 files. `mvn clean verify` is green:
2238 tests, 0 failures; both source trees compile under -Xlint:all -Werror
with zero warnings; yamllint, actionlint and shellcheck are clean; the
container image builds, boots on port 5000 and serves every route.

C1 (CRITICAL) Schema parity. All eleven unconstrained-String source columns
now map with @Column(columnDefinition = "varchar"), so Hibernate renders a
capacity-free varchar on H2, PostgreSQL and MySQL instead of the forbidden
varchar(255). No length, nullable or unique facet is added anywhere.
JpaMappingIntegrationTest asserts the capacity-free rendering per dialect and
forbids any varchar(NNN), clob, text, longtext or oid character type.

M1 Datasource and driver contract. Removed the h2 scheme from
DatabaseUrlTranslator, which advertised a driver the executable jar does not
carry; corrected the POM driver comments to the real override state.

M2 LLM prompt contract. Deleted the dead PROMPT_BODY_LIMIT and the dangling
boundedBody reference; the documented contract is now the delivered verbatim
interpolation.

M3 Decision log accuracy. Reconciled every named entry against the tree.
DL-091 and DL-124 became pointers; DL-083, DL-084, DL-158, DL-165, DL-178,
DL-180, DL-202, DL-216, DL-226, DL-239 and DL-099 were corrected. Allocated
DL-277 (transport-security header policy) and DL-278 (UTC clock and trend
window) to own two subjects no row owned, re-pointing 31 miscitations.

M4 Traceability accuracy. Regenerated the miscited generated_at row, the
scheduling mechanics in four places (no @Scheduled; completion-based Trigger),
the inverted DataSourceConfigTest description, and section 1.5.1, which
claimed exhaustiveness at 31 placeholders while application.yml declares 48.

M5 Rule 1 explainability. Stripped reasoning, alte